--- a/style.css
+++ b/style.css
@@ -447,4 +447,22 @@ footer {
   .robo-texto {
     font-size: 0.8em;
   }
+  .payment-section {
+  margin-top: 20px;
+  text-align: center;
+}
+.payment-icons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+.payment-icons img {
+  vertical-align: middle;
+}
+.payment-secure {
+  font-size: 14px;
+  color: #555;
+  margin-top: 10px;
+}
 }
